--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class='content'>
         <h1>Monte Carlo approximation of PI</h1>
         <input id="numPontos" type="text" placeholder="Número de pontos" value="200">
-        <button id="run" onclick="if ( draw ) draw()">Executar</button>
+        <button id="run" onclick="if ( draw ) draw()">Run</button>
     </div>
     <canvas id="canvas" width="700" height="700"></canvas>
     <div class='content'>
